upgrade bootstrap css to v1.4, old 1.3 layout problems were fixed, missing theres files, commit again

--- a/diode/app/assets/stylesheets/application.css
+++ b/diode/app/assets/stylesheets/application.css
@@ -11,3 +11,4 @@ body {background-image: url(/assets/body_bg.jpg);background-repeat: repeat;}
 div.content {min-width:940px;}
 p.pull-right {color:#BFBFBF;}
 img.header_msg {vertical-align:middle;}
+footer {text-align:center;}
